--- a/introduce-project/index.html
+++ b/introduce-project/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="static/animate.css">
+    <!-- <link rel="stylesheet" href="static/css/mui.min.css"> -->
+    <!-- <link rel="stylesheet" href="static/css/style.css"> -->
     <script src='static/jquery.min.js'></script>
-    <title>introduce-project</title>
+    <title>test</title>
     <script>   
     (function (doc, win) {
             var docEl = doc.documentElement,
