更新package.json，引入echarts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- <link rel="stylesheet" href="static/css/mui.min.css"> -->
     <!-- <link rel="stylesheet" href="static/css/style.css"> -->
     <script src='static/jquery.min.js'></script>
+    <script src='static/js/echarts.js'></script>
+    <title>test</title>
     <title>test</title>
     <script>   
     (function (doc, win) {
