--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="screen-orientation" content="portrait"><!-- uc强制竖屏 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="static/animate.css">
+    <link rel="stylesheet" href="static/video-js.css">
     <!-- <link rel="stylesheet" href="static/css/mui.min.css"> -->
     <!-- <link rel="stylesheet" href="static/css/style.css"> -->
     <script src='static/jquery.min.js'></script>
     <script src='static/js/echarts.js'></script>
+    <script src='static/js/video.min.js'></script>
     <title>test</title>
     <title>test</title>
     <script>   
@@ -15,6 +18,7 @@
             var docEl = doc.documentElement,
                 resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
                 recalc = function () {
+                    window.videojs=videojs
                     var clientWidth = docEl.clientWidth;
                     if (!clientWidth) return;
                     if(clientWidth>=640){
