--- a/index.html
+++ b/index.html
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
+    <title>柯增才-web</title>
+    <meta name="keywords" content="柯增才">
+    <meta name="description" content="柯增才-前端开发工程师,Web前端,js,H5,混合app开发,网站开发座右铭:Cease to struggle and you cease to live.充满好奇心的年青人,欢迎找我吃饭">
     <meta charset="utf-8">
+    <meta name="screen-orientation" content="portrait"><!-- uc强制竖屏 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="static/animate.css">
     <link rel="stylesheet" href="static/css/video-js.css">
     <!-- <link rel="stylesheet" href="static/css/mui.min.css"> -->
     <!-- <link rel="stylesheet" href="static/css/style.css"> -->
-    <script src='static/jquery.min.js'></script>
-    <script src='static/js/echarts.js'></script>
-    <script src='static/js/video.min.js'></script>
-    <title>柯增才-web测试</title>
-    <meta name="keywords" content="柯增才,Web前端,js,H5,混合app开发,网站开发">
-    <meta name="description" content="柯增才-前端开发工程师,座右铭:Cease to struggle and you cease to live.充满好奇心的年青人,欢迎找我吃饭">
-    <script>   
-    (function (doc, win) {
-            var docEl = doc.documentElement,
-                resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
-                recalc = function () {
-                    window.videojs=videojs
-                    var clientWidth = docEl.clientWidth;
-                    if (!clientWidth) return;
-                    docEl.style.fontSize =20 * (clientWidth / 1200) + 'px';
-                };
-
-            if (!doc.addEventListener) return;
-            win.addEventListener(resizeEvt, recalc, false);
-            doc.addEventListener('DOMContentLoaded', recalc, false);
-        })(document, window);
-    </script>
   </head>
   <body>
     <div id="app"></div>
+    <script src='static/jquery.min.js'></script>
+    <script src='static/js/echarts.js'></script>
+    <script src='static/js/video.min.js'></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
