--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     
     <title>柯增才-web</title>
     <meta name="keywords" content="柯增才">
+    <meta name="baidu-site-verification" content="Y3ofrqihSx" />
     <meta name="description" content="柯增才-前端开发工程师,Web前端,js,H5,混合app开发,网站开发座右铭:Cease to struggle and you cease to live.充满好奇心的年青人,欢迎找我吃饭">
     <meta charset="utf-8">
     <meta name="screen-orientation" content="portrait"><!-- uc强制竖屏 -->
