fix: add update time

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>柯增才-web</title>
+    <%= htmlWebpackPlugin.options.isProd %>
     <meta name="baidu-site-verification" content="Y3ofrqihSx" />
     <meta name="keywords" content="柯增才" />
     <meta
